@startuml Time Master 

class Employee{
    -String id 
    -String name
    -ArrayList workdays

    +String getId()
    +String getName()
}

class TimeMaster {
  - Employee chosenEmployee;
  - Path saveDirPath;
  - TimeMasterJsonParser jsonParser;
  - ArrayList<Employee> employees;

  + void saveEmployees()
  + void readEmployees()
}

class TimeMasterJsonParser{
    final ObjectMapper mapper
    final String filePath

    + void write(ArrayList<Employee> employees)
    + ArrayList<Employee> read()
}


class Workday{
   - date : LocalDate
   - timeIn : LocalTime
   - timeOut : LocalTime

    LocalDate getDate()
    LocalTime getTimeIn()
    LocalTime getTimeOut()

}

class App {
    start()
}

class TimeMasterController {
    - Employee chosenEmployee
    - Workday chosenWorkday
    - Path saveDirPath
    - TimeMasterFileHandler timeMasterFileHandler
    - ArrayList<Employee> employees

    - void initialize()
    - void handleRegisterTime()
    - void clearInputs()
    - void saveEmployees()
    - void readEmployees()
    - void updateEmployeeMenu()
}

App -- TimeMasterController : " initilize"

TimeMasterController --> TimeMaster : handel input

TimeMaster --> TimeMasterJsonParser : read and write to Json 

TimeMaster --> Employee

TimeMasterJsonParser -- "*" Employee 

Employee --> "*" Workday 


@enduml